@@ -1,17 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST filelight-1.0-rc2.tar.bz2 530449 RMD160 67ce0deb03f14cc280f7471156c4f2a3135ebb5e SHA1 2a4644c598dfcc408af0af65e655e2525494708d SHA256 0743d49e60a1b2fa7b54ecdc13fb15c7a6fb144169ba272bc566a18022c245d6
 DIST filelight-1.0.tar.bz2 530449 RMD160 67ce0deb03f14cc280f7471156c4f2a3135ebb5e SHA1 2a4644c598dfcc408af0af65e655e2525494708d SHA256 0743d49e60a1b2fa7b54ecdc13fb15c7a6fb144169ba272bc566a18022c245d6
-EBUILD filelight-1.0.ebuild 669 RMD160 89bd792df98fbf0bf8411ebc166ffcc9afc7d9ed SHA1 bf73069df041c53dd4e73dea0206d6e704b0519c SHA256 dbd254b6d58973ac8b8f3fa17682d7b664e549b2dd786a17fa32f329b7e2e44a
-MD5 3580f80fedc51433ce0619b87d37c1d7 filelight-1.0.ebuild 669
-RMD160 89bd792df98fbf0bf8411ebc166ffcc9afc7d9ed filelight-1.0.ebuild 669
-SHA256 dbd254b6d58973ac8b8f3fa17682d7b664e549b2dd786a17fa32f329b7e2e44a filelight-1.0.ebuild 669
+EBUILD filelight-1.0.ebuild 808 RMD160 f2075cf5b45b26cbc782987df473772e3c3f2ad5 SHA1 1a059bdc451b62d1b9493390e8f371edfe38a051 SHA256 4752d2e5e70ca9552a45fb19dc4f67fef030e9e53a080c77e101c22179f444f9
+MD5 4222933bb381c60e8c8aabe5fb1c7ee1 filelight-1.0.ebuild 808
+RMD160 f2075cf5b45b26cbc782987df473772e3c3f2ad5 filelight-1.0.ebuild 808
+SHA256 4752d2e5e70ca9552a45fb19dc4f67fef030e9e53a080c77e101c22179f444f9 filelight-1.0.ebuild 808
 EBUILD filelight-1.0_rc2.ebuild 713 RMD160 11191e68525ffed75e3395e0172a9993f491f464 SHA1 a7b435363c99177ecd6be1144d8c8696dcfc5826 SHA256 5c512ccffbd6b626e387c4fdacbca1cc2f7c65fa14d0826177d17f6f21fcbeb2
 MD5 c4d06b36a6e28bc1bb4a1cd5a6e8f825 filelight-1.0_rc2.ebuild 713
 RMD160 11191e68525ffed75e3395e0172a9993f491f464 filelight-1.0_rc2.ebuild 713
 SHA256 5c512ccffbd6b626e387c4fdacbca1cc2f7c65fa14d0826177d17f6f21fcbeb2 filelight-1.0_rc2.ebuild 713
-MISC ChangeLog 4549 RMD160 03742c5b3d1ea4546fd3f3f75abb3ffc82d16d2c SHA1 aaf45b2e5972523b14fedb89cd4e1ee894c20e50 SHA256 05c1da4cb0ee0f408e31649cb965a1901b77ba4ed27c8fbec3f77b2eb555c239
-MD5 dad2084022af2c79ff11ec02d0558d65 ChangeLog 4549
-RMD160 03742c5b3d1ea4546fd3f3f75abb3ffc82d16d2c ChangeLog 4549
-SHA256 05c1da4cb0ee0f408e31649cb965a1901b77ba4ed27c8fbec3f77b2eb555c239 ChangeLog 4549
+MISC ChangeLog 4729 RMD160 398300374d43ea806a5adc51accb0a13c790c9f5 SHA1 2479c1bf530fc9e52135540f06c86d0460d51ce4 SHA256 de2c64a664d4d248aa3db97a1a84e9b0da79d697ac33c557da9e34a41f4b8a8c
+MD5 fc4b01600b4e445cb45cde9a0a94c5b3 ChangeLog 4729
+RMD160 398300374d43ea806a5adc51accb0a13c790c9f5 ChangeLog 4729
+SHA256 de2c64a664d4d248aa3db97a1a84e9b0da79d697ac33c557da9e34a41f4b8a8c ChangeLog 4729
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -22,3 +25,10 @@ SHA256 205f61f6e0a73b9097d9d66e249d31ac418f823cb2b3f9288239386efb7dba66 files/di
 MD5 77c5b073551dae2da06bac61b98df8d4 files/digest-filelight-1.0_rc2 256
 RMD160 13505c881dec91ed0a5712e0b25428bf41bf0c2f files/digest-filelight-1.0_rc2 256
 SHA256 d2e515d57a843b5c47441f938840d5852cee7cf8fdb92e6e43cfb51d6f6ac734 files/digest-filelight-1.0_rc2 256
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGfqA9CkvF58q80IkRAvroAJ919BhP7JP4S6cHyUbXtHs9BF8ihwCfQUJE
+8mIqo2PF+y0kFGQOrDWd1VE=
+=lQ7V
+-----END PGP SIGNATURE-----
