@@ -1,6 +1,10 @@
 # ChangeLog for kde-misc/filelight
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.19 2007/02/23 20:11:37 masterdriverz Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.20 2007/06/24 16:47:49 philantrop Exp $
+
+  24 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org> filelight-1.0.ebuild:
+  Added a post-install message about localisation support being available via
+  kde-misc/filelight-i18n.
 
   23 Feb 2007; Charlie Shepherd <masterdriverz@gentoo.org>
   filelight-1.0_rc2.ebuild, filelight-1.0.ebuild:
